Improve Scaffold activation handoff
